--- a/style.css
+++ b/style.css
@@ -1,12 +1,24 @@
 body {
     margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    /* display: flex; */
+    /* justify-content: center;
+    align-items: center; */
     background-color: lightgreen;
-    height: 200vh;
+    /* height: 100vh; */
 }
 h1 {
     color: seagreen;
     margin: 0;
+    font: 3rem sans-serif;
+}
+.box {
+    display: grid;
+    /* grid-template-columns: 100px 300px auto; */
+    /* grid-template-columns: repeat(2, 1fr); */
+    grid-template-columns: repeat(2, auto);
+}
+.block {
+    border: 1px solid;
+    height: 50px;
+    border-radius: 8px;
 }
